--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,12 @@
   },
   "homepage": "https://github.com/Praisebuka/TranscriptionWithNode#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "srt-parser": "^0.1.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
